@@ -408,11 +408,11 @@ class Beat(PyoObject):
 
         Beat outputs many signals identified with a string between brackets:
         
-        obj['tap'] returns audio stream of the current tap of the measure.
-        obj['amp'] returns audio stream of the current beat amplitude.
-        obj['dur'] returns audio stream of the current beat duration in seconds.
-        obj['end'] returns audio stream with a trigger just before the end of the measure.
-        
+        |  obj['tap'] returns audio stream of the current tap of the measure.  
+        |  obj['amp'] returns audio stream of the current beat amplitude.  
+        |  obj['dur'] returns audio stream of the current beat duration in seconds.  
+        |  obj['end'] returns audio stream with a trigger just before the end of the measure.
+
         obj without brackets returns the generated trigger stream of the measure.
          
         The out() method is bypassed. Beat's signal can not be sent to audio outs.
@@ -3144,3 +3144,250 @@ class TrigVal(PyoObject):
     @value.setter
     def value(self, x): 
         self.setValue(x)
+
+class Euclide(PyoObject):
+    """
+    Euclidean rhythm generator.
+    
+    This object generates euclidean trigger patterns, resulting in onsets 
+    in the rhythm to be as equidistant as possible.
+    
+    A trigger is an audio signal with a value of 1 surrounded by 0s.
+    
+    The play() method starts the Euclide and is not called at the object 
+    creation time.
+
+    :Parent: :py:class:`PyoObject`
+
+    :Args:
+
+        time : float or PyoObject, optional
+            Time, in seconds, between each beat of the pattern. Defaults to 0.125.
+        taps : int, optional
+            Number of beats in the generated pattern (measure length), max = 64. 
+            Defaults to 16.
+        onsets : int, optional
+            Number of onsets (a positive tap) in the generated pattern. 
+            Defaults to 10.
+        poly : int, optional
+            Beat polyphony. Denotes how many independent streams are 
+            generated by the object, allowing overlapping processes.
+            
+            Available only at initialization. Defaults to 1.
+
+    .. note::
+
+        Euclide outputs many signals identified with a string between brackets:
+
+        |  obj['tap'] returns audio stream of the current tap of the measure.  
+        |  obj['amp'] returns audio stream of the current beat amplitude.  
+        |  obj['dur'] returns audio stream of the current beat duration in seconds.  
+        |  obj['end'] returns audio stream with a trigger just before the end of the measure.
+        
+        obj without brackets returns the generated trigger stream of the measure.
+         
+        The out() method is bypassed. Euclide's signal can not be sent to audio outs.
+
+        Euclide has no `mul` and `add` attributes.
+
+    >>> s = Server().boot()
+    >>> s.start()
+    >>> t = CosTable([(0,0), (100,1), (500,.3), (8191,0)])
+    >>> beat = Euclide(time=.125, taps=16, onsets=[8,7], poly=1).play()
+    >>> trmid = TrigXnoiseMidi(beat, dist=12, mrange=(60, 96))
+    >>> trhz = Snap(trmid, choice=[0,2,3,5,7,8,10], scale=1)
+    >>> tr2 = TrigEnv(beat, table=t, dur=beat['dur'], mul=beat['amp'])
+    >>> a = Sine(freq=trhz, mul=tr2*0.3).out()
+
+    """
+    def __init__(self, time=.125, taps=16, onsets=10, poly=1):
+        PyoObject.__init__(self)
+        self._tap_dummy = []
+        self._amp_dummy = []
+        self._dur_dummy = []
+        self._end_dummy = []
+        self._time = time
+        self._taps = taps
+        self._onsets = onsets
+        self._poly = poly
+        time, taps, onsets, lmax = convertArgsToLists(time, taps, onsets)
+        self._base_players = [Beater_base(wrap(time,i), wrap(taps,i), wrap([100]*lmax,i), poly) for i in range(lmax)]
+        self._base_objs = [Beat_base(wrap(self._base_players,j), i) for i in range(poly) for j in range(lmax)]
+        self._tap_objs = [BeatTapStream_base(wrap(self._base_players,j), i) for i in range(poly) for j in range(lmax)]
+        self._amp_objs = [BeatAmpStream_base(wrap(self._base_players,j), i) for i in range(poly) for j in range(lmax)]
+        self._dur_objs = [BeatDurStream_base(wrap(self._base_players,j), i) for i in range(poly) for j in range(lmax)]
+        self._end_objs = [BeatEndStream_base(wrap(self._base_players,j), i) for i in range(poly) for j in range(lmax)]
+        for i in range(lmax):
+            preset = [wrap(taps,i)] + self.__generate__(wrap(onsets,i), wrap(taps,i))
+            self._base_players[i].setPresets([preset])
+            self._base_players[i].recall(0)
+
+    def __generate__(self, m, k):
+        """
+        Generates the euclidean rhythm for `m` onsets 
+        in a measure of length `k` (number of taps). 
+        Looping implementation, faster than recursive.
+        """
+        if m > k: m = k
+        k -= m
+        mv, kv = [1], [0]
+        while k > 1:
+            if m > k:
+                m, k = k, m-k
+                mv, kv = mv+kv, mv  
+            else:
+                m, k = m, k-m
+                mv, kv = mv+kv, kv
+        return mv * m + kv * k
+
+    def __getitem__(self, i):
+        if i == 'tap':
+            self._tap_dummy.append(Dummy([obj for obj in self._tap_objs]))
+            return self._tap_dummy[-1]
+        if i == 'amp':
+            self._amp_dummy.append(Dummy([obj for obj in self._amp_objs]))
+            return self._amp_dummy[-1]
+        if i == 'dur':
+            self._dur_dummy.append(Dummy([obj for obj in self._dur_objs]))
+            return self._dur_dummy[-1]
+        if i == 'end':
+            self._end_dummy.append(Dummy([obj for obj in self._end_objs]))
+            return self._end_dummy[-1]
+        if type(i) == SliceType:
+            return self._base_objs[i]
+        if i < len(self._base_objs):
+            return self._base_objs[i]
+        else:
+            print "'i' too large!"         
+
+    def get(self, identifier="amp", all=False):
+        """
+        Return the first sample of the current buffer as a float.
+
+        Can be used to convert audio stream to usable Python data.
+
+        "tap", "amp" or "dur" must be given to `identifier` to specify
+        which stream to get value from.
+
+        :Args:
+
+            identifier : string {"tap", "amp", "dur"}
+                Address string parameter identifying audio stream.
+                Defaults to "amp".
+            all : boolean, optional
+                If True, the first value of each object's stream
+                will be returned as a list. 
+                
+                If False, only the value of the first object's 
+                stream will be returned as a float.
+
+        """
+        if not all:
+            return self.__getitem__(identifier)[0]._getStream().getValue()
+        else:
+            return [obj._getStream().getValue() for obj in self.__getitem__(identifier).getBaseObjects()]
+
+    def setTime(self, x):
+        """
+        Replace the `time` attribute.
+
+        :Args:
+
+            x : float or PyoObject
+                New `time` attribute.
+
+        """
+        self._time = x
+        x, lmax = convertArgsToLists(x)
+        [obj.setTime(wrap(x,i)) for i, obj in enumerate(self._base_players)]
+
+    def setTaps(self, x):
+        """
+        Replace the `taps` attribute.
+
+        :Args:
+
+            x : int
+                New `taps` attribute.
+
+        """
+        self._taps = x
+        x, onsets, lmax = convertArgsToLists(x, self._onsets)
+        for i in range(len(self._base_players)):
+            preset = [wrap(x,i)] + self.__generate__(wrap(onsets,i), wrap(x,i))
+            self._base_players[i].setPresets([preset])
+            self._base_players[i].recall(0)
+
+    def setOnsets(self, x):
+        """
+        Replace the `onsets` attribute.
+
+        :Args:
+
+            x : int
+                New `onsets` attribute.
+
+        """
+        self._onsets = x
+        x, taps, lmax = convertArgsToLists(x, self._taps)
+        for i in range(len(self._base_players)):
+            preset = [wrap(taps,i)] + self.__generate__(wrap(x,i), wrap(taps,i))
+            self._base_players[i].setPresets([preset])
+            self._base_players[i].recall(0)
+
+    def play(self, dur=0, delay=0):
+        dur, delay, lmax = convertArgsToLists(dur, delay)
+        self._tap_objs = [obj.play(wrap(dur,i), wrap(delay,i)) for i, obj in enumerate(self._tap_objs)]
+        self._amp_objs = [obj.play(wrap(dur,i), wrap(delay,i)) for i, obj in enumerate(self._amp_objs)]
+        self._dur_objs = [obj.play(wrap(dur,i), wrap(delay,i)) for i, obj in enumerate(self._dur_objs)]
+        self._end_objs = [obj.play(wrap(dur,i), wrap(delay,i)) for i, obj in enumerate(self._end_objs)]
+        return PyoObject.play(self, dur, delay)
+
+    def stop(self):
+        [obj.stop() for obj in self._tap_objs]
+        [obj.stop() for obj in self._amp_objs]
+        [obj.stop() for obj in self._dur_objs]
+        [obj.stop() for obj in self._end_objs]
+        return PyoObject.stop(self)
+
+    def out(self, chnl=0, inc=1, dur=0, delay=0):
+        return self.play(dur, delay)
+
+    def setMul(self, x):
+        pass
+
+    def setAdd(self, x):
+        pass
+
+    def setSub(self, x):
+        pass
+
+    def setDiv(self, x):
+        pass
+
+    def ctrl(self, map_list=None, title=None, wxnoserver=False):
+        self._map_list = [SLMap(0.01, 1., 'lin', 'time', self._time),
+                          SLMap(2, 64, 'lin', 'taps', self._taps, res="int", dataOnly=True),
+                          SLMap(0, 64, 'lin', 'onsets', self._onsets, res="int", dataOnly=True)]
+        PyoObject.ctrl(self, map_list, title, wxnoserver)
+
+    @property
+    def time(self):
+        """float or PyoObject. Time, in seconds, between each beat.""" 
+        return self._time
+    @time.setter
+    def time(self, x): self.setTime(x)
+
+    @property
+    def taps(self):
+        """int. Number of beats in the generated pattern.""" 
+        return self._taps
+    @taps.setter
+    def taps(self, x): self.setTaps(x)
+
+    @property
+    def onsets(self):
+        """int. Number of onsets in the generated pattern.""" 
+        return self._onsets
+    @onsets.setter
+    def onsets(self, x): self.setOnsets(x)
